# StaticfilesUploader

./: README.md  main.py  pyproject.toml
.cache/replit/: __replit_disk_meta.json
static/: styles.css
templates/: another.html  index.html
