[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "runner"
version = "0.1.0"
[tool.poetry.dependencies]
fastapi = "^0.74.0"
python = "^3.8"
uvicorn = "standard"
jinja2 = "^3"
replit = "^3.0.0"
python-multipart = "latest"
[tool.poetry.dev-dependencies]
